2008-02-12  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/alsa/gstalsasink.c: (gst_alsasink_delay):
	  Revert patch that makes the sink hold the object lock when
	  calling snd_pcm_delay(), since it breaks playback for me.

2008-02-12  Julien Moutte  <julien@fluendo.com>

	* tests/examples/seek/seek.c: (rate_spinbutton_changed_cb): Add
	some seek flags when changing rate.

2008-02-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtp/gstbasertpaudiopayload.c:
	(gst_base_rtp_audio_payload_handle_frame_based_buffer),
	(gst_base_rtp_audio_payload_handle_sample_based_buffer):
	Fix potential leaks.

	* gst-libs/gst/rtp/gstbasertppayload.c: (gst_basertppayload_chain):
	Fix leak when there is no function configured.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* sys/v4l/v4lsrc_calls.c: (gst_v4lsrc_buffer_class_init),
	(gst_v4lsrc_buffer_finalize):
	Correctly chain up the finalize method.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gio/gstgiostreamsink.c:
	* ext/gio/gstgiostreamsrc.c:
	Add documentation and example code for giostreamsink/giostreamsrc.

	* tests/check/pipelines/gio.c: (GST_START_TEST):
	Ask the GMemoryOutputStream for the data instead of assuming that
	the pointer to the data stayed the same. It could've been realloc'ed.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gio/gstgiosink.c:
	* ext/gio/gstgiosrc.c:
	Make the documentation of giosink/giosrc complete, large parts
	are based on the gnomevfssink/gnomevfssrc docs.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* docs/plugins/gst-plugins-base-plugins-docs.sgml:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* docs/plugins/gst-plugins-base-plugins.args:
	* docs/plugins/gst-plugins-base-plugins.hierarchy:
	* docs/plugins/gst-plugins-base-plugins.interfaces:
	* docs/plugins/gst-plugins-base-plugins.prerequisites:
	* docs/plugins/gst-plugins-base-plugins.signals:
	* docs/plugins/inspect/plugin-adder.xml: